# flink-viz

./: .gitignore  README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: flinkPoller.ts  kafka.ts  server.ts  types.ts
docs/superpowers/plans/: 2026-05-10-flink-viz-phase1.md
docs/superpowers/specs/: 2026-05-10-flink-viz-design.md
event-generator/: pyproject.toml
event-generator/src/: emitter.py  main.py  models.py  producer.py
event-generator/tests/: test_emitter.py  test_producer.py
flink-jobs/: pom.xml
flink-jobs/common/: pom.xml
flink-jobs/common/src/main/java/com/flinkviz/common/: PageView.java  Purchase.java  TopKResult.java
flink-jobs/fraud-cep/: pom.xml
flink-jobs/topk-products/: pom.xml
flink-jobs/view-purchase-join/: pom.xml
flink-jobs/window-stats/: pom.xml
scripts/: env.sh  setup-flink.sh  start-all.sh  start-backend.sh  start-flink.sh  start-generator.sh  start-kafka.sh  start-ui.sh  stop-all.sh  submit-all-jobs.sh  submit-job.sh
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: Leaderboard.tsx
ui/src/hooks/: useWebSocket.test.ts  useWebSocket.ts
ui/src/teaching/: ConceptTree.tsx  Controls.tsx  ExplainPane.tsx  LessonRunner.tsx  concepts.tsx  lessons.tsx  types.ts
ui/src/teaching/viz/: CheckpointsViz.tsx  DagViz.tsx  EventTimeViz.tsx  FraudViz.tsx  JoinViz.tsx  KeyedStateViz.tsx  LateEventsViz.tsx  PlaceholderViz.tsx  RecoveryViz.tsx  TopKViz.tsx  WatermarkViz.tsx  WindowsViz.tsx
(+5 files in other folders)
