[project]
name = "event-generator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "confluent-kafka==2.3.0",
  "pydantic==2.6.4",
]

[project.optional-dependencies]
dev = ["pytest==8.1.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
